--- a/kafka-3.8.yaml
+++ b/kafka-3.8.yaml
@@ -2,7 +2,7 @@ package:
   name: kafka-3.8
   # When bumping check to see if the CVE mitigation can be removed.
   version: 3.8.0
-  epoch: 4
+  epoch: 5
   description: Apache Kafka is a distributed event streaming platform
   copyright:
     - license: Apache-2.0
@@ -38,6 +38,10 @@ pipeline:
       repository: https://github.com/apache/kafka
       tag: ${{package.version}}
       expected-commit: 771b9576b00ecf5b64ab6e8bedf04156fbdb5cd6
+
+  - uses: patch
+    with:
+      patches: jetty.patch
 
   - runs: |
       gradle clean releaseTarGz
