--- a/azuredisk-csi-1.31.yaml
+++ b/azuredisk-csi-1.31.yaml
@@ -1,10 +1,13 @@
 package:
   name: azuredisk-csi-1.31
   version: 1.31.0
-  epoch: 0
+  epoch: 1
   description: Azure Disk CSI Driver
   copyright:
     - license: Apache-2.0
+  dependencies:
+    provides:
+      - azuredisk-csi=${{package.full-version}}
 
 pipeline:
   - uses: git-checkout
@@ -30,6 +33,9 @@ subpackages:
       - runs: |
           mkdir -p "${{targets.subpkgdir}}"
           ln -sf /usr/bin/azurediskplugin ${{targets.subpkgdir}}/azurediskplugin
+    dependencies:
+      provides:
+        - azuredisk-csi-compat=${{package.full-version}}
 
 update:
   enabled: true
