Added patch to fix spark-3.5/GHSA-g8m5-722r-8whq

--- a/spark-3.5/pombump-properties.yaml
+++ b/spark-3.5/pombump-properties.yaml
@@ -17,3 +17,5 @@ properties:
     value: "4.1.108.Final"
   - property: zookeeper.version
     value: "3.8.4"
+  - property: jetty.version
+    value: "9.4.56.v20240826"
