Update mysqld exporter (#32314)
<!---
Provide a short summary in the Title above. Examples of good PR titles:
* "ruby-3.1: new package"
* "haproxy: fix CVE-2014-123456"
-->

<!--
Please include references to any related issues or delete this section
otherwise.
 -->

This symlink is needed for image building.

---------

Signed-off-by: anushkamittal20 <anushka.mittal@chainguard.dev>

--- a/prometheus-mysqld-exporter.yaml
+++ b/prometheus-mysqld-exporter.yaml
@@ -2,7 +2,7 @@ package:
   name: prometheus-mysqld-exporter
   # When bumping this version you can remove the `go get` line in the build script
   version: 0.15.1
-  epoch: 11
+  epoch: 12
   description: Prometheus Exporter for MySQL server metrics
   copyright:
     - license: Apache-2.0
@@ -48,6 +48,8 @@ subpackages:
           mkdir -p ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/
           chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
           ln -sf /usr/bin/mysqld_exporter ${{targets.subpkgdir}}/opt/bitnami/mysqld-exporter/bin/mysqld_exporter
+          mkdir -p ${{targets.subpkgdir}}/bin
+          ln -sf /usr/bin/mysqld_exporter ${{targets.subpkgdir}}/bin/mysqld_exporter
     test:
       pipeline:
         - runs: |
