--- a/pango.yaml
+++ b/pango.yaml
@@ -5,7 +5,7 @@
 package:
   name: pango
   version: 1.54.0
-  epoch: 0
+  epoch: 1
   description: library for layout and rendering of text
   copyright:
     - license: LGPL-2.1-or-later
@@ -30,6 +30,7 @@ environment:
       - help2man
       - libxft-dev
       - meson
+      - openssf-compiler-options
       - posix-libc-utils
 
 pipeline:
