--- a/pango.yaml
+++ b/pango.yaml
@@ -62,6 +62,9 @@ subpackages:
         - pango
         - pango-tools
     description: pango dev
+    test:
+      pipeline:
+        - uses: test/pkgconf
 
   - name: pango-doc
     pipeline:
