Remedieate(CVE): GHSA-4g8c-wm8x-jfhw by bumping the netty package version to 4.1.118.Final in build.gradle file.
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/sonarqube-10.yaml
+++ b/sonarqube-10.yaml
@@ -44,7 +44,9 @@ pipeline:
       tag: ${{package.version}}
       expected-commit: cfdf2faf6d306c576ea97861fe0f22a64a68f53c
 
-  - uses: maven/pombump
+  - uses: patchs
+    with:
+      patches: rem-cve-bump-netty-version.patch
 
   - name: build
     runs: |
