Fix(Build): remedieate the CVE  GHSA-pr98-23f8-jwxv
Use patch instead of pombump as We can't (currently), use pombump, as this repo places license info as
code comments, embedded in the pom.xml files. pombump currently isn't able
to handle this. Internal issue create to track.

Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/management-api-for-apache-cassandra-5.0.yaml
+++ b/management-api-for-apache-cassandra-5.0.yaml
@@ -35,14 +35,12 @@ pipeline:
     with:
       patches: pom-xml.patch mgmt-api-server-pom-xml.patch mgmt-api-agent-5.0.x-pom-xml.patch
 
-  - uses: maven/pombump
-
   - runs: |
       echo "Running build..."
       MAAC_PATH="${{targets.contextdir}}"/opt/management-api
       mkdir -p "${{targets.contextdir}}"/usr/local/bin
       mkdir -p "${{targets.contextdir}}"/opt/management-api
-      mvn -q -ff package -Dskip.surefire.tests -DskipTests -DskipOpenApi -Dlicense.skip=true -Dxml-format.skip=true
+      mvn -q -ff package -Dskip.surefire.tests -DskipTests -DskipOpenApi
 
       cp ./cassandra/scripts/docker-entrypoint.sh "${{targets.contextdir}}"/usr/local/bin/
       find . -type f -name "datastax-*.jar" -exec mv -t $MAAC_PATH -i '{}' +
