--- a/kubernetes-csi-driver-hostpath.yaml
+++ b/kubernetes-csi-driver-hostpath.yaml
@@ -25,6 +25,7 @@ pipeline:
     with:
       deps: |-
         golang.org/x/net@v0.33.0
+        k8s.io/kubernetes@v1.32.2
 
   - uses: go/build
     with:
