--- a/akhq.yaml
+++ b/akhq.yaml
@@ -1,7 +1,7 @@
 package:
   name: akhq
   version: 0.25.1
-  epoch: 2
+  epoch: 3
   description: "Kafka GUI for Apache Kafka to manage topics, topics data, consumers group, schema registry, connect and more"
   copyright:
     - license: Apache-2.0
@@ -28,7 +28,8 @@ pipeline:
 
   - uses: patch
     with:
-      patches: logback-cves.patch
+      patches: |
+        cves-20250220.patch
 
   - runs: |
       ./gradlew build -x test -x startTestKafkaCluster --parallel --no-daemon
