--- a/kafka-3.9.yaml
+++ b/kafka-3.9.yaml
@@ -1,7 +1,7 @@
 package:
   name: kafka-3.9
   version: 3.9.0
-  epoch: 1
+  epoch: 2
   description: Apache Kafka is a distributed event streaming platform
   copyright:
     - license: Apache-2.0
@@ -36,7 +36,9 @@ pipeline:
       repository: https://github.com/apache/kafka
       tag: ${{package.version}}
       expected-commit: 84caaa6e9da06435411510a81fa321d4f99c351f
-
+  - uses: patch
+    with:
+      patches: GHSA-4g8c-wm8x-jfhw-fix.patch
   - runs: |
       gradle clean releaseTarGz
 
