selenium: bump netty to 4.1.118.Final to address CVE-2025-24970

--- a/selenium.yaml
+++ b/selenium.yaml
@@ -43,7 +43,7 @@ pipeline:
 
   - uses: patch
     with:
-      patches: ignore-root-user-error.patch
+      patches: ignore-root-user-error.patch bump-netty.patch
 
   - runs: |
       export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/lib:/usr/lib
