az: use APK for cryptography package
This addresses GHSA-79v4-65xg-pq4g.

--- a/az.yaml
+++ b/az.yaml
@@ -1,10 +1,13 @@
 package:
   name: az
   version: "2.69.0"
-  epoch: 0
+  epoch: 1
   description: Azure CLI
   copyright:
     - license: MIT
+  dependencies:
+    runtime:
+      - py3-cryptography
 
 environment:
   contents:
@@ -12,6 +15,7 @@ environment:
       - build-base
       - busybox
       - ca-certificates-bundle
+      - py3-cryptography
       - py3-pip
       - python-3
       - python-3-dev
