--- a/py3-cassandra-medusa.yaml
+++ b/py3-cassandra-medusa.yaml
@@ -2,7 +2,7 @@
 package:
   name: py3-cassandra-medusa
   version: "0.23.0"
-  epoch: 1
+  epoch: 2
   description: Apache Cassandra backup and restore tool
   copyright:
     - license: Apache-2.0
@@ -31,13 +31,17 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 2320fc2ee1ee03df663f90384facad5b892a63e8
 
+  - uses: patch
+    with:
+      patches: bump-python-version.patch
+
   - name: Python Build
     runs: |
       # As of 0.22.3, this package is incompatible with poetry 2.0.
       # See: https://github.com/thelastpickle/cassandra-medusa/commit/fd044f92d9a5ea245c61d1df9c58462de51496e4
       pip${{vars.py-version}} install 'poetry>=1.0.0,<2.0.0'
       poetry add "pyOpenSSL@^24.0.0"
-      poetry add "cryptography@^43.0.1"
+      poetry add "cryptography@^44.0.1"
       # GHSA-34jh-p97f-mpxf: urllib3
       poetry add "urllib3@^1.26.19"
       poetry run pip freeze | grep -v cassandra-medusa > requirements.txt
