--- a/op-geth.yaml
+++ b/op-geth.yaml
@@ -1,7 +1,7 @@
 package:
   name: op-geth
   version: 1.101500.0
-  epoch: 0
+  epoch: 1
   description: The go-ethereum command line interface
   copyright:
     - license: LGPL-3.0-or-later
@@ -37,6 +37,22 @@ pipeline:
       output: geth
 
 subpackages:
+  - name: "${{package.name}}-compat"
+    description: "Compatibility package to place binaries in the same location used by the upstream image"
+    pipeline:
+      - runs: |
+          mkdir -p "${{targets.subpkgdir}}"/usr/local/bin
+          ln -sf /usr/bin/geth ${{targets.subpkgdir}}/usr/local/bin/geth
+    test:
+      environment:
+        contents:
+          packages:
+            - ${{package.name}}
+      pipeline:
+        - runs: |
+            /usr/local/bin/geth version
+            /usr/local/bin/geth --help
+
   - name: ${{package.name}}-clef
     pipeline:
       - uses: go/build
