--- a/management-api-for-apache-cassandra-5.0.yaml
+++ b/management-api-for-apache-cassandra-5.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: management-api-for-apache-cassandra-5.0
-  version: "0.1.96"
-  epoch: 1
+  version: "0.1.97"
+  epoch: 0
   description: RESTful / Secure Management Sidecar for Apache Cassandra
   copyright:
     - license: Apache-2.0
@@ -25,7 +25,7 @@ pipeline:
   - uses: git-checkout
     with:
       repository: https://github.com/k8ssandra/management-api-for-apache-cassandra
-      expected-commit: 6ecf51489dca5e348cb36ba225ca214e236b9e14
+      expected-commit: fa025a0ba0495ee85ab2ebbbf0b463a975f31d47
       tag: v${{package.version}}
 
   # We can't (currently), use pombump, as this repo places license info as
@@ -33,9 +33,8 @@ pipeline:
   # to handle this. Internal issue create to track.
   - uses: patch
     with:
-      patches: pom-xml.patch mgmt-api-server-pom-xml.patch mgmt-api-agent-5.0.x-pom-xml.patch
-
-  - uses: maven/pombump
+      patches: |
+        20250221-consolidated-cve-patches.patch
 
   - runs: |
       echo "Running build..."
