airflow: bump cryptography to address GHSA-79v4-65xg-pq4g

--- a/airflow.yaml
+++ b/airflow.yaml
@@ -1,7 +1,7 @@
 package:
   name: airflow
   version: "2.10.5"
-  epoch: 0
+  epoch: 1
   description: Platform to programmatically author, schedule, and monitor workflows
   options:
     #  There is a dependency on libarrow.so although it
@@ -58,7 +58,7 @@ pipeline:
 
   - uses: patch
     with:
-      patches: requests.patch urllib3.patch
+      patches: cryptography.patch requests.patch urllib3.patch
 
   - working-directory: ./airflow/www
     runs: |
