superset: bump cryptography to address GHSA-79v4-65xg-pq4g

--- a/superset.yaml
+++ b/superset.yaml
@@ -1,7 +1,7 @@
 package:
   name: superset
   version: 4.1.1
-  epoch: 2
+  epoch: 3
   description: Data Visualization and Data Exploration Platform
   copyright:
     - license: Apache-2.0
@@ -70,6 +70,8 @@ pipeline:
       pip install pillow pyarrow
       # For running translations
       pip install flask flask-appbuilder==4.5.1
+
+      sed -i 's/"cryptography>=42.0.4.*"/"cryptography>=44.0.1"/' pyproject.toml
 
       # Build Apache Superset
       pip install .
