superset: bump cryptography to address GHSA-79v4-65xg-pq4g (#43350)

--- a/superset.yaml
+++ b/superset.yaml
@@ -1,7 +1,7 @@
 package:
   name: superset
   version: 4.1.1
-  epoch: 2
+  epoch: 3
   description: Data Visualization and Data Exploration Platform
   copyright:
     - license: Apache-2.0
@@ -71,11 +71,16 @@ pipeline:
       # For running translations
       pip install flask flask-appbuilder==4.5.1
 
+      sed -i 's/"cryptography>=42.0.4.*"/"cryptography>=44.0.1"/' pyproject.toml
+
       # Build Apache Superset
       pip install .
 
       # translations for the web application, Is a non-blocking call, so errors may be ignored
       flask fab babel-compile --target superset/translations
+
+      # Remove malware-scan-triggering tests folder from built package
+      rm -rf venv/lib/python${{vars.python-version}}/site-packages/tests/
 
   - runs: |
       mkdir -p ${{targets.destdir}}/usr/share/superset
