--- a/apache-nifi.yaml
+++ b/apache-nifi.yaml
@@ -74,6 +74,7 @@ pipeline:
       for dir in conf logs database_repository flowfile_repository content_repository provenance_repository state; do
         mkdir -p "${{targets.contextdir}}/${NIFI_HOME}/${dir}"
       done
+        mkdir -p "${{targets.contextdir}}/${NIFI_HOME}/logs/"
 
       # Set shell in environment script
       echo "#!/bin/sh\n" > "${{targets.contextdir}}/${NIFI_HOME}/bin/nifi-env.sh"
