--- a/apache-activemq-artemis.yaml
+++ b/apache-activemq-artemis.yaml
@@ -1,7 +1,7 @@
 package:
   name: apache-activemq-artemis
   version: "2.39.0"
-  epoch: 1
+  epoch: 2
   description: ActiveMQ Artemis is the next generation message broker from Apache ActiveMQ.
   copyright:
     - license: Apache-2.0
@@ -46,6 +46,7 @@ pipeline:
   - uses: maven/pombump
 
   - runs: |
+      rm pombump-deps.yaml pombump-properties.yaml
       mvn -Prelease package -DskipTests -Drat.excludesFile=rat-exclusions.txt
       mkdir -p "${{targets.contextdir}}"/opt/activemq-artemis
       cp -r artemis-distribution/target/apache-artemis-${{package.version}}-bin/apache-artemis-${{package.version}}/* "${{targets.contextdir}}"/opt/activemq-artemis/
