--- a/vitess-21.0.yaml
+++ b/vitess-21.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: vitess-21.0
   version: "21.0.3"
-  epoch: 0
+  epoch: 1
   description: Autoscaling components for Kubernetes
   copyright:
     - license: Apache-2.0
@@ -76,6 +76,7 @@ pipeline:
       npm pkg set overrides.nanoid=3.3.8
       npm pkg set overrides.ip=2.0.1
       npm pkg set overrides.tar=6.2.1
+      npm pkg set overrides.esbuild=0.25.0
 
   - name: Build web UI
     working-directory: web/vtadmin
