--- a/yara-x.yaml
+++ b/yara-x.yaml
@@ -1,7 +1,7 @@
 package:
   name: yara-x
   version: "0.13.0"
-  epoch: 0
+  epoch: 1
   description: "A rewrite of YARA in Rust."
   copyright:
     - license: BSD-3-Clause
@@ -51,6 +51,7 @@ test:
         - go
         - pkgconf-dev
   pipeline:
+    - uses: test/pkgconf
     - runs: |
         cat <<EOF > test.c
         #include <yara_x.h>
