--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -1,7 +1,7 @@
 package:
   name: opensearch-dashboards-2
   version: "2.19.0" # when updating please check if we can remove the patched package.json for the reporting plugin
-  epoch: 0
+  epoch: 1
   description: Open source visualization dashboards for OpenSearch
   copyright:
     - license: Apache-2.0
@@ -130,14 +130,11 @@ subpackages:
           tag: ${{package.version}}.0
           destination: ./plugins/${{range.value}}
       - runs: |
-          # fix cve CVE-2024-45801
           cd ./plugins/${{range.value}}
+          # fixes CVE-2025-26791 by bumping dompurify dependency definitions
           if [ ${{range.value}} = "reportsDashboards" ]
           then
-            # Define the dependencies
-            dependencies='{"dompurify": "^3.1.3"}'
-            # Apply the dependencies
-            jq --argjson dependencies "$dependencies" '.dependencies += $dependencies' package.json > temp.json && mv temp.json package.json
+            git fetch origin 2.19 && git cherry-pick 3ad10434bd83591588476a057b8eacc5739f7882
           fi
 
           # Downgrade cypress version to 12.17.4 if this is securityDashboard due to upstream problem:
