--- a/flux-source-controller.yaml
+++ b/flux-source-controller.yaml
@@ -1,7 +1,7 @@
 package:
   name: flux-source-controller
   version: "1.5.0"
-  epoch: 2
+  epoch: 3
   description: The GitOps Toolkit source management component
   copyright:
     - license: Apache-2.0
@@ -38,6 +38,25 @@ pipeline:
         -trimpath -o "${{targets.destdir}}"/usr/bin/source-controller .
 
   - uses: strip
+
+subpackages:
+  - name: fluxcd-source-controller-bitnami-compat
+    description: "compat package with bitnami/flux image"
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: fluxcd-source-controller
+          version-path: 1/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/flux/bin/
+          chmod g+rwX ${{targets.subpkgdir}}/opt/bitnami
+          ln -sf /usr/bin/source-controller ${{targets.subpkgdir}}/opt/bitnami/flux/bin/source-controller
+          cp LICENSE ${{targets.subpkgdir}}/opt/bitnami/licenses/LICENSE
+    test:
+      pipeline:
+        - runs: |
+            run-script --version
+            run-script --help
 
 update:
   enabled: true
