fix pyspark-scala-2.13 GHSA-r978-9m6m-6gm6

--- a/spark-3.5/pombump-deps.yaml
+++ b/spark-3.5/pombump-deps.yaml
@@ -21,3 +21,6 @@ patches:
     - groupId: org.apache.derby.osgi.EmbeddedActivator
       artifactId: derby
       version: 10.14.3
+    - groupId: org.apache.zookeeper
+      artifactId: zookeeper
+      version: 3.8.4
