ggshield: bump cryptography to 44.0.2 to address CVE
Namely CVE-2024-12797 GHSA-79v4-65xg-pq4g

--- a/ggshield.yaml
+++ b/ggshield.yaml
@@ -46,6 +46,12 @@ pipeline:
       python3 install-pdm.py
       export PATH=/home/build/.local/bin:$PATH
 
+      # cryptography 44.0.2 (CVE-2024-12797 GHSA-79v4-65xg-pq4g) requires a
+      # higher minimum Python
+      sed -i 's/requires-python = ">=3.8.1"/requires-python = ">=3.12"/' pyproject.toml
+      sed -i 's/cryptography~=43.0.1/cryptography~=44.0.2/' pyproject.toml
+      pdm update cryptography  # Regenerate lock file
+
       # Install packages
       # Based on directions from https://github.com/GitGuardian/ggshield/blob/v1.34.0/doc/dev/getting-started.md
       pdm install --dev
