--- a/neo4j-2025.01/pombump-deps.yaml
+++ b/neo4j-2025.01/pombump-deps.yaml
@@ -1,4 +1,4 @@
 patches:
-    - groupId: com.google.protobuf
-      artifactId: protobuf-java
-      version: 3.25.5
+    - groupId: io.netty
+      artifactId: netty-bom
+      version: 4.1.118.Final
