ruby-3.1: cherry-pick upstream commit to bump uri gem
This addresses GHSA-22h5-pq3x-2gf2.

--- a/ruby-3.1.yaml
+++ b/ruby-3.1.yaml
@@ -51,6 +51,7 @@ pipeline:
       expected-commit: a777087be612b7675fe012560bf0d8fddff20f55
       cherry-picks: |
         ruby_3_1/b97108a6466837d619598c7c3db00b357580e504: Merge cgi-0.3.7
+        ruby_3_1/ca7cc093c46b62684eb9ca2cb60663be7a5e7211: Merge uri-0.12.4
 
   - uses: patch
     with:
