ruby-3.4: cherry-pick upstream commit to bump uri gem
This addresses GHSA-22h5-pq3x-2gf2.

--- a/ruby-3.4.yaml
+++ b/ruby-3.4.yaml
@@ -66,6 +66,7 @@ pipeline:
       expected-commit: d2930f8e7a5db8a7337fa43370940381b420cc3e
       cherry-picks: |
         ruby_3_4/5653eb90bb1b548f0bbe92af717da44a77eb0d55: Merge cgi-0.4.2
+        ruby_3_4/5f2e0cb0c65e56b0f8008de74a563d9a084d30a2: Merge uri-1.0.3
 
   - uses: patch
     with:
