--- a/ruby-3.2.yaml
+++ b/ruby-3.2.yaml
@@ -1,7 +1,7 @@
 package:
   name: ruby-3.2
   version: "3.2.7"
-  epoch: 0
+  epoch: 1
   description: "the Ruby programming language"
   copyright:
     - license: Ruby
@@ -56,6 +56,8 @@ pipeline:
       repository: https://github.com/ruby/ruby
       tag: v${{vars.underscore-package-version}}
       expected-commit: 02ec31524440656c4e1d3f2d84dfbd15d2c63658
+      cherry-picks: |
+        ruby_3_2/946907f218e4bbef7f7a215962fcb7c97f94b7d3: Merge uri-0.12.4
 
   - uses: patch
     with:
