--- a/ruby-3.2.yaml
+++ b/ruby-3.2.yaml
@@ -58,6 +58,7 @@ pipeline:
       expected-commit: 02ec31524440656c4e1d3f2d84dfbd15d2c63658
       cherry-picks: |
         ruby_3_2/946907f218e4bbef7f7a215962fcb7c97f94b7d3: Merge uri-0.12.4
+        ruby_3_2/9e5d68f03f6800b0ccde3bee32ac1789a1d0dc14: Merge cgi-0.3.7
 
   - uses: patch
     with:
