fix prism GHSA-hw8r-x6gr-5gjp
Fixes CVE-2025-1302

--- a/prism.yaml
+++ b/prism.yaml
@@ -1,7 +1,7 @@
 package:
   name: prism
   version: 5.12.1
-  epoch: 1
+  epoch: 2
   description: "A set of packages for API mocking and contract testing with OpenAPI v2 and OpenAPI v3.x"
   url: https://github.com/stoplightio/prism
   copyright:
@@ -27,6 +27,10 @@ pipeline:
       expected-commit: 197eb6f9cc4067da6806c14a2919419624609e9a
       repository: https://github.com/stoplightio/prism
       tag: v${{package.version}}
+
+  - uses: patch
+    with:
+      patches: CVE-2025-1302.patch
 
   - runs: |
       # See 'compiler' build stage of prism/Dockerfile (https://github.com/stoplightio/prism/blob/master/Dockerfile)
