try: Update github.com/go-git/go-git/v5 to to fix GHSA-r9px-m959-cxf4 and GHSA-v725-9546-7q7m
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/argo-cd-2.14.yaml
+++ b/argo-cd-2.14.yaml
@@ -31,6 +31,7 @@ pipeline:
         k8s.io/apimachinery@v0.31.2
         k8s.io/kubernetes@v1.31.6
         github.com/go-jose/go-jose/v4@v4.0.5
+        github.com/go-git/go-git/v5@v5.13.0
 
   - runs: |
       cd ui
