--- a/kubeflow-volumes-web-app.yaml
+++ b/kubeflow-volumes-web-app.yaml
@@ -1,7 +1,7 @@
 package:
   name: kubeflow-volumes-web-app
   version: 1.9.2
-  epoch: 3
+  epoch: 4
   description: Kubeflow volumes web app component
   copyright:
     - license: Apache-2.0
@@ -38,7 +38,7 @@ pipeline:
 
   - uses: patch
     with:
-      patches: upgrade-urllib3.patch
+      patches: upgrade-urllib3.patch upgrade-jinja2.patch
 
   - runs: |
       # Build the backend common libs into a wheel
