--- a/pango.yaml
+++ b/pango.yaml
@@ -5,7 +5,7 @@
 package:
   name: pango
   version: "1.56.1"
-  epoch: 0
+  epoch: 1
   description: library for layout and rendering of text
   copyright:
     - license: LGPL-2.1-or-later
@@ -64,6 +64,9 @@ subpackages:
     test:
       pipeline:
         - uses: test/pkgconf
+        - uses: test/tw/ldd-check
+          with:
+            packages: pango-dev
 
   - name: pango-doc
     pipeline:
