--- a/influxd.yaml
+++ b/influxd.yaml
@@ -5,7 +5,7 @@ package:
   # a commit which will fix it but it is not released yet.
   # So, for the next bump, please remove the `rust=1.82.0` pinning.
   version: 2.7.11
-  epoch: 4
+  epoch: 5
   description: Scalable datastore for metrics, events, and real-time analytics
   copyright:
     - license: MIT
@@ -20,6 +20,12 @@ environment:
       - curl
       - go
       - rust=1.82.0
+
+var-transforms:
+  - from: ${{package.version}}
+    match: ^(\d+)\.\d+\.\d+$
+    replace: "$1"
+    to: major-version
 
 pipeline:
   - uses: git-checkout
@@ -60,6 +66,76 @@ subpackages:
         - busybox
         - bash
         - yq
+
+  - name: ${{package.name}}-bitnami-compat
+    description: "compat package with bitnami/influxdb image"
+    dependencies:
+      runtime:
+        - bash
+        - coreutils
+        - curl
+        - findutils
+        - influxd
+        - influx
+        - grep
+        - libgcc
+        - procps
+        - sed
+        - wait-for-port # used in /opt/bitnami/scripts/libinfluxdb.sh
+    pipeline:
+      - uses: bitnami/compat
+        with:
+          image: influxdb
+          version-path: ${{vars.major-version}}/debian-12
+      - runs: |
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin
+          ln -sf /usr/bin/influxd ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin/influxd
+          ln -sf /usr/bin/influx ${{targets.subpkgdir}}/opt/bitnami/influxdb/bin/influx
+
+          # copy etc to influxdb/etc.default
+          mkdir -p ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default
+          install -m755 -Dt ${{targets.subpkgdir}}/opt/bitnami/influxdb/etc.default/defaults/influxdb2 ${{targets.destdir}}/etc/defaults/influxdb2/config.yml
+          chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/opt/bitnami/
+
+          mkdir -p ${{targets.subpkgdir}}/bitnami/influxdb
+          chmod -R u+rwX,g+rwX,o+rw ${{targets.subpkgdir}}/bitnami/influxdb
+
+          mkdir -p ${{targets.subpkgdir}}/docker-entrypoint-initdb.d/
+
+          # Use package path while unpacking
+          find . -iname "*.sh" -exec sed 's#/opt/bitnami#${{targets.subpkgdir}}/opt/bitnami#g' -i {} \;
+            ${{targets.subpkgdir}}/opt/bitnami/scripts/influxdb/postunpack.sh
+          # Restore path
+          find ${{targets.subpkgdir}}/opt/bitnami -type f -exec sed 's#${{targets.subpkgdir}}##g' -i {} \;
+    test:
+      environment:
+        environment:
+          BITNAMI_APP_NAME: "influxd"
+        accounts:
+          users:
+            - username: influxdb
+              gid: 0
+              uid: 1001
+      pipeline:
+        - name: version tests
+          runs: |
+            /opt/bitnami/influxdb/bin/influxd version | grep ${{package.version}}
+        - name: Start the influxd server
+          uses: test/daemon-check-output
+          with:
+            start: |
+              env INFLUXDB_ADMIN_USER=marty \
+                  INFLUXDB_ADMIN_USER_PASSWORD=F1uxKapacit0r85 \
+                  INFLUXDB_ADMIN_ORG=InfluxData \
+                  INFLUXDB_ADMIN_BUCKET=telegraf \
+                  INFLUXDB_ADMIN_RETENTION=168 \
+                  INFLUXDB_ADMIN_USER_TOKEN=where-were-going-we-dont-need-roads \
+                  /opt/bitnami/scripts/influxdb/entrypoint.sh /opt/bitnami/scripts/influxdb/run.sh
+            timeout: 60
+            expected_output: |
+              Welcome to the Bitnami influxd container
+              Starting InfluxDB in background...
+              Deploying InfluxDB from scratch
 
 update:
   enabled: true
