docker/28.0.1-r0: fix CVE-2025-22868

--- a/docker.yaml
+++ b/docker.yaml
@@ -78,6 +78,7 @@ pipeline:
       sed -i 's|github.com/golang/protobuf v1.5.3|github.com/golang/protobuf v1.5.4|' vendor.mod
       sed -i 's|github.com/opencontainers/runc v1.1.13|github.com/opencontainers/runc v1.1.14|' vendor.mod
       sed -i 's|github.com/golang-jwt/jwt/v4 v4.5.0|github.com/golang-jwt/jwt/v4 v4.5.1|' vendor.mod
+      sed -i 's|golang.org/x/oauth2 v0.23.0|golang.org/x/oauth2 v0.27.0|' vendor.mod
 
       ./hack/vendor.sh
 
