jitsucom-bulker: fix CVE-2025-22869

--- a/jitsucom-bulker.yaml
+++ b/jitsucom-bulker.yaml
@@ -24,24 +24,34 @@ pipeline:
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/crypto@v0.35.0
       modroot: ./bulkerapp
 
   - uses: go/bump
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/crypto@v0.35.0
       modroot: ./ingest
 
   - uses: go/bump
     with:
       deps: |-
+        golang.org/x/crypto@v0.35.0
+      modroot: ./sync-sidecar
+
+  - uses: go/bump
+    with:
+      deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/crypto@v0.35.0
       modroot: ./sync-controller
 
   - uses: go/bump
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/crypto@v0.35.0
       modroot: ./ingress-manager
 
 data:
