tileserver-gl: bump axios to ^1.8.2
CVE-2025-27152 GHSA-jr5f-v2jv-69x6

--- a/tileserver-gl.yaml
+++ b/tileserver-gl.yaml
@@ -1,7 +1,7 @@
 package:
   name: tileserver-gl
   version: "5.1.3"
-  epoch: 1
+  epoch: 2
   description: Vector and raster maps with GL styles. Server side rendering by MapLibre GL Native. Map tile server for MapLibre GL JS, Android, iOS, Leaflet, OpenLayers, GIS via WMTS, etc.
   copyright:
     - license: BSD-2-Clause
@@ -53,6 +53,10 @@ pipeline:
       tag: v${{package.version}}
       expected-commit: 7662cb84ce9f7ce37ccd22312155e2d300a586e1
       destination: app
+
+  - uses: patch
+    with:
+      patches: package-json.patch
 
   # install packages
   - working-directory: app
