--- a/prism.yaml
+++ b/prism.yaml
@@ -33,6 +33,8 @@ pipeline:
       patches: CVE-2025-1302.patch
 
   - runs: |
+      # CVE-2025-27789
+      npm pkg set resolutions.@babel/helpers=7.26.10
       # See 'compiler' build stage of prism/Dockerfile (https://github.com/stoplightio/prism/blob/master/Dockerfile)
       yarn && yarn build
 
