gitlab-cng-17.8: bump golang.org/x/oauth2
CVE-2025-22868

--- a/gitlab-cng-17.8.yaml
+++ b/gitlab-cng-17.8.yaml
@@ -253,6 +253,7 @@ subpackages:
           deps: |-
             github.com/golang-jwt/jwt/v4@v4.5.1
             golang.org/x/crypto@v0.35.0
+            golang.org/x/oauth2@v0.27.0
           modroot: ./container-registry
       - uses: go/build
         with:
@@ -343,6 +344,7 @@ subpackages:
           deps: |-
             golang.org/x/net@v0.33.0
             golang.org/x/crypto@v0.35.0
+            golang.org/x/oauth2@v0.27.0
       - uses: go/build
         with:
           packages: .
@@ -518,6 +520,7 @@ subpackages:
           deps: |-
             golang.org/x/net@v0.33.0
             golang.org/x/crypto@v0.35.0
+            golang.org/x/oauth2@v0.27.0
       - working-directory: ./shell
         runs: |
           make build
