--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -1,7 +1,7 @@
 package:
   name: opensearch-dashboards-2
   version: "2.19.1" # when updating please check if we can remove the patched package.json for the reporting plugin
-  epoch: 0
+  epoch: 1
   description: Open source visualization dashboards for OpenSearch
   copyright:
     - license: Apache-2.0
@@ -72,8 +72,8 @@ pipeline:
       # unset our global flags to allow the build to succeed.
       unset LDFLAGS
 
-      # fix CVE-2024-47764
-      resolutions='{"**/cookie": "^0.7.0"}'
+      # fix CVE-2024-47764, CVE-2025-27789
+      resolutions='{"**/cookie": "^0.7.0", "@babel/runtime": "^7.26.10", "@babel/runtime-corejs3": "^7.26.10"}'
       jq --argjson resolutions "$resolutions" '.resolutions += $resolutions' package.json > temp.json && mv temp.json package.json
 
       # fix CVE-2023-28155
@@ -124,6 +124,10 @@ subpackages:
           destination: ./plugins/${{range.value}}
       - runs: |
           cd ./plugins/${{range.value}}
+
+          # fix CVE-2025-27789
+          resolutions='{"@babel/runtime": "^7.26.10"}'
+          jq --argjson resolutions "$resolutions" '.resolutions += $resolutions' package.json > temp.json && mv temp.json package.json
 
           dependencies='{"cypress": "^13.5.1"}'
           jq --argjson dependencies "$dependencies" '.dependencies += $dependencies' package.json > temp.json && mv temp.json package.json
