vitess-21.0: fix CVE-2025-27789

--- a/vitess-21.0.yaml
+++ b/vitess-21.0.yaml
@@ -1,7 +1,7 @@
 package:
   name: vitess-21.0
   version: "21.0.3"
-  epoch: 2
+  epoch: 3
   description: Autoscaling components for Kubernetes
   copyright:
     - license: Apache-2.0
@@ -82,6 +82,9 @@ pipeline:
       npm pkg set overrides.ip=2.0.1
       npm pkg set overrides.tar=6.2.1
       npm pkg set overrides.esbuild=0.25.0
+      npm pkg set overrides['@babel/helpers']=7.26.10
+      npm pkg set overrides['@babel/runtime']=7.26.10
+      npm pkg set overrides['@babel/runtime-corejs3']=7.26.10
 
   - name: Build web UI
     working-directory: web/vtadmin
