--- a/kubernetes-dashboard.yaml
+++ b/kubernetes-dashboard.yaml
@@ -32,6 +32,7 @@ pipeline:
       deps: |-
         golang.org/x/oauth2@v0.27.0
         golang.org/x/crypto@v0.35.0
+        golang.org/x/net@v0.36.0
       modroot: modules/web
 
   - working-directory: modules/web
