--- a/nats-server-config-reloader.yaml
+++ b/nats-server-config-reloader.yaml
@@ -1,7 +1,7 @@
 package:
   name: nats-server-config-reloader
   version: "0.17.1"
-  epoch: 0
+  epoch: 1
   description: "NATS server configuration reloader utility"
   copyright:
     - license: Apache-2.0
@@ -42,6 +42,9 @@ subpackages:
 
   - name: ${{package.name}}-oci-entrypoint
     description: Entrypoint for ${{package.name}}
+    dependencies:
+      runtime:
+        - dash-binsh
     pipeline:
       - runs: |
           install -m755 cicd/assets/entrypoint.sh ${{targets.contextdir}}/entrypoint.sh
