--- a/gostatsd.yaml
+++ b/gostatsd.yaml
@@ -1,7 +1,7 @@
 package:
   name: gostatsd
   version: 28.3.0
-  epoch: 12
+  epoch: 13
   description: An implementation of Etsy's statsd in Go with tags support
   copyright:
     - license: MIT
@@ -26,6 +26,7 @@ pipeline:
         golang.org/x/net@v0.33.0
         golang.org/x/crypto@v0.35.0
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/net@v0.36.0
 
   - uses: go/build
     with:
