--- a/opensearch-dashboards-2.yaml
+++ b/opensearch-dashboards-2.yaml
@@ -1,7 +1,7 @@
 package:
   name: opensearch-dashboards-2
   version: "2.19.1" # when updating please check if we can remove the patched package.json for the reporting plugin
-  epoch: 1
+  epoch: 2
   description: Open source visualization dashboards for OpenSearch
   copyright:
     - license: Apache-2.0
@@ -125,8 +125,8 @@ subpackages:
       - runs: |
           cd ./plugins/${{range.value}}
 
-          # fix CVE-2025-27789
-          resolutions='{"@babel/runtime": "^7.26.10"}'
+          # fix CVE-2025-27789, CVE-2025-25977
+          resolutions='{"@babel/runtime": "^7.26.10", "canvg": "^4.0.3"}'
           jq --argjson resolutions "$resolutions" '.resolutions += $resolutions' package.json > temp.json && mv temp.json package.json
 
           dependencies='{"cypress": "^13.5.1"}'
