--- a/kube-state-metrics.yaml
+++ b/kube-state-metrics.yaml
@@ -22,6 +22,7 @@ pipeline:
         github.com/emicklei/go-restful/v3@v3.11.3
         golang.org/x/crypto@v0.35.0
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/net@v0.36.0
       modroot: .
 
   - uses: go/build
