Rem CVEs: GHSA-27wf-5967-98gx GHSA-82m2-cv7p-4m75 GHSA-jgfp-53c3-624w GHSA-pxhw-596r-rwq5 CVE-2024-9042 GHSA-vv39-3w5q-974q
Signed-off-by: Debasish Biswas <debasishbsws.dev@gmail.com>

--- a/k8ssandra-client.yaml
+++ b/k8ssandra-client.yaml
@@ -21,6 +21,11 @@ pipeline:
         github.com/docker/docker@v27.1.1
         golang.org/x/oauth2@v0.27.0
         golang.org/x/net@v0.36.0
+        k8s.io/kubernetes@v1.29.14
+        k8s.io/api@v0.29.14
+        k8s.io/apiextensions-apiserver@v0.29.14
+        k8s.io/cli-runtime@v0.29.14
+        k8s.io/kubectl@v0.29.14
 
   - uses: go/build
     with:
