chore(datadog-agent): fix cve-2025-22870
Signed-off-by: Massimiliano Giovagnoli <massimiliano.giovagnoli@chainguard.dev>

--- a/datadog-agent.yaml
+++ b/datadog-agent.yaml
@@ -126,6 +126,7 @@ pipeline:
     with:
       deps: |-
         golang.org/x/oauth2@v0.27.0
+        golang.org/x/net@v0.36.0
       replaces: github.com/mholt/archiver/v3=github.com/anchore/archiver/v3@v3.5.2
       show-diff: true
 
