--- a/cue.yaml
+++ b/cue.yaml
@@ -28,6 +28,7 @@ pipeline:
     with:
       deps: |-
         golang.org/x/net@v0.36.0
+        golang.org/x/oauth2@v0.27.0
 
   - uses: go/build
     with:
