--- a/trufflehog.yaml
+++ b/trufflehog.yaml
@@ -1,7 +1,7 @@
 package:
   name: trufflehog
   version: "3.88.17"
-  epoch: 0
+  epoch: 1
   description: Find, verify, and analyze leaked credentials
   dependencies:
     runtime:
@@ -28,6 +28,7 @@ pipeline:
         github.com/go-jose/go-jose/v4@v4.0.5
         golang.org/x/oauth2@v0.27.0
         golang.org/x/crypto@v0.35.0
+        golang.org/x/net@v0.36.0
 
   - uses: go/build
     with:
